RESOLVED FIXED43026
Cg logs "<Error>: CGPathCloseSubpath: no current point. " in lots of tests
https://bugs.webkit.org/show_bug.cgi?id=43026
Summary Cg logs "<Error>: CGPathCloseSubpath: no current point. " in lots of tests
Nikolas Zimmermann
Reported 2010-07-27 01:26:01 PDT
This is a regression from bug 41410, the path parsing cleanup. We're calling closePath() where not needed somewhere.
Attachments
testcase (634 bytes, image/svg+xml)
2010-07-27 01:35 PDT, Nikolas Zimmermann
no flags
Patch (1.18 KB, patch)
2010-08-18 06:32 PDT, Dirk Schulze
zimmermann: review+
Nikolas Zimmermann
Comment 1 2010-07-27 01:35:57 PDT
Created attachment 62654 [details] testcase
Dirk Schulze
Comment 2 2010-08-18 06:32:57 PDT
Nikolas Zimmermann
Comment 3 2010-08-18 07:17:02 PDT
Comment on attachment 64698 [details] Patch WebCore/ChangeLog:10 + Not testable, this problem occurs on running pixel tests. It's testable, every mac buildbot reports these warnings in the stderr* logs.
Simon Fraser (smfr)
Comment 4 2010-08-20 11:32:16 PDT
Can this be checked in?
Dirk Schulze
Comment 5 2010-08-20 13:20:11 PDT
Land it tomorrow.
Dirk Schulze
Comment 6 2010-08-24 06:41:14 PDT
Note You need to log in before you can comment on or make changes to this bug.