2010-08-24  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        Cg logs "<Error>: CGPathCloseSubpath: no current point. " in lots of tests
        https://bugs.webkit.org/show_bug.cgi?id=43026

        Check if the path is empty before closing it.

        * svg/SVGPathBuilder.cpp:
        (WebCore::SVGPathBuilder::moveTo):


Canonical link: https://commits.webkit.org/56673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65894 268f45cc-cd09-0410-ab3c-d52691b4dbfc