WebCore/svg/SVGPathBuilder.cpp
@@ -37,7 +37,7 @@ void SVGPathBuilder::moveTo(const FloatPoint& targetPoint, bool closed, PathCoor
 {
     ASSERT(m_path);
     m_current = mode == AbsoluteCoordinates ? targetPoint : m_current + targetPoint;
-    if (closed)
+    if (closed && !m_path->isEmpty())
         m_path->closeSubpath();
     m_path->moveTo(m_current);
 }
